--- a/test.yaml
+++ b/test.yaml
@@ -25,9 +25,18 @@ config:
   activ: relu      # Activation - h1 = ['tanh', 'relu']
   n_hl_a: 4          # Number of hidden layers - h2 = [1, 2, 3]
   n_cl_a: 64         # Initial number of channels (halves for each hidden layer) - h3 = [10, 20, 50]   
-  n_ls_a: 4          # Latent space z dimensions - h5 = [6, 8, 10, 12, 14, 16, 18]  
+  n_ls_a: 6          # Latent space z dimensions - h5 = [6, 8, 10, 12, 14, 16, 18]  
   batch_size: 64    # Batch size autoencoder - h6 = [64, 128, 512, 1024]    
   epochs: 100         # Epochs - h7 (on demand)
   seed: 229          # Seed number
-  patience: 15
+  patience: 100
         
+config_grid: 
+  activ: [relu]      # Activation - h1 = ['tanh', 'relu']
+  n_hl_a: [4]          # Number of hidden layers - h2 = [1, 2, 3]
+  n_cl_a: [64]         # Initial number of channels (halves for each hidden layer) - h3 = [10, 20, 50]   
+  n_ls_a: [4]        # Latent space z dimensions - h5 = [6, 8, 10, 12, 14, 16, 18]  
+  batch_size: [64]    # Batch size autoencoder - h6 = [64, 128, 512, 1024]    
+  epochs: [100]         # Epochs - h7 (on demand)
+  seed: [229]          # Seed number
+  patience: [15]
