--- a/results/result.yaml
+++ b/results/result.yaml
@@ -1,5 +1,5 @@
-pump_id_00_6dB:
-  AUC: 0.8996038926108856
+pump_id_00_0dB:
+  AUC: 0.708836617927527
   Config: &id001
     activ: relu
     batch_size: 512
@@ -9,20 +9,60 @@ pump_id_00_6dB:
     n_ls_a: 6
     patience: 200
     seed: 229
-  Date_Time: 15/05/2023 22:48:59
+  Date_Time: 15/05/2023 23:06:18
+  F1: 0.7586206896551725
+pump_id_00_6dB:
+  AUC: 0.8996038926108856
+  Config: *id001
+  Date_Time: 15/05/2023 23:39:06
   F1: 0.8433734939759037
+pump_id_00_min6dB:
+  AUC: 0.6629175020783412
+  Config: *id001
+  Date_Time: 15/05/2023 23:41:00
+  F1: 0.23312883435582818
+pump_id_02_0dB:
+  AUC: 0.6171576982387794
+  Config: *id001
+  Date_Time: 15/05/2023 23:14:50
+  F1: 0.3884892086330935
 pump_id_02_6dB:
   AUC: 0.571463355247139
   Config: *id001
-  Date_Time: 15/05/2023 22:49:43
+  Date_Time: 15/05/2023 23:39:40
   F1: 0.5822784810126581
+pump_id_02_min6dB:
+  AUC: 0.5494683873062252
+  Config: *id001
+  Date_Time: 15/05/2023 23:50:17
+  F1: 0.1639344262295082
+pump_id_04_0dB:
+  AUC: 0.9581
+  Config: *id001
+  Date_Time: 15/05/2023 23:23:40
+  F1: 0.48120300751879697
 pump_id_04_6dB:
   AUC: 0.999
   Config: *id001
-  Date_Time: 15/05/2023 22:50:00
+  Date_Time: 15/05/2023 23:40:10
   F1: 0.964102564102564
+pump_id_04_min6dB:
+  AUC: 0.9202999999999999
+  Config: *id001
+  Date_Time: 16/05/2023 00:00:31
+  F1: 0.40944881889763773
+pump_id_06_0dB:
+  AUC: 0.8517877739331027
+  Config: *id001
+  Date_Time: 15/05/2023 23:30:01
+  F1: 0.07476635514018691
 pump_id_06_6dB:
   AUC: 0.9678008458285275
   Config: *id001
-  Date_Time: 15/05/2023 22:55:49
+  Date_Time: 15/05/2023 23:40:35
   F1: 0.7738095238095237
+pump_id_06_min6dB:
+  AUC: 0.7468281430219147
+  Config: *id001
+  Date_Time: 16/05/2023 00:07:32
+  F1: 0.16071428571428573
