--- a/test.yaml
+++ b/test.yaml
@@ -3,6 +3,7 @@ pickle_directory: ./pickle/test
 model_directory: ./models/mimii
 result_directory: ./results
 result_grid_directory: ./results/grid_evaluation
+result_model_anomaly: ./results/model_anomaly
 result_file: result.yaml
 
 feature:
