--- a/test.yaml
+++ b/test.yaml
@@ -4,6 +4,7 @@ model_directory: ./models/mimii
 result_directory: ./results
 result_grid_directory: ./results/grid_evaluation
 result_model_anomaly: ./results/model_anomaly
+result_conf_matrix: ./results/conf_matrix
 result_file: result.yaml
 
 feature:
